submission/feedback_api_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedback-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: feedback-api
  template:
    metadata:
      labels:
        app: feedback-api
    spec:
      affinity:
          podAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - feedback-api
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: feedback-api
        image: lchappuis/feedback-api:submission
        livenessProbe:
          httpGet:
            path: /health
            port: 80 # port interne du conteneur et pas externe !
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 5
          failureThreshold: 3
        volumeMounts:
        - mountPath: /app/database
          name: db-storage
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: feedback-db-pvc
